# trail-follower

./: CMakeLists.txt  LICENSE  package.xml
include/trail_follower/: trail.h
launch/: trail.launch
src/: trail.cpp  trail_node.cpp
